# DETR-rdd

./: README.md  pyproject.toml  requirements.txt
scripts/: download_rdd2022_china_motorbike.sh  download_rdd2022_india.sh  download_rdd2022_japan.sh  download_rdd2022_norway.sh
src/detr_rdd/: app.py  configs.py  metrics.py  train.py  utils.py
src/detr_rdd/datasets/: detr_ds.py  helpers.py  transforms.py
src/detr_rdd/models/: detr.py  helpers.py
